<resources>
    <string name="app_name">UnityEd</string>
    <string name="Title" />
    <string name="sub_courses">Sub Courses</string>
    <string name="course_name">Course Name</string>
    <string name="whats_next_after_10th">What\'s Next After 10th?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="duration">Duration:</string>
    <string name="education_app">Education App!</string>
    <string name="student_type">Student Type</string>
    <string name="website">Website :</string>
    <string name="syllabus">Syllabus :</string>
    <string name="Eligibility">Eligibility :</string>
    <string name="test_name">Test Name</string>
    <string name="kotlin">Kotlin</string>
    <string name="college_image">College Image</string>
    <string name="discordLink">https://discord.gg/vd58SE2J8C</string>

    <string name="title">Title</string>
    <string name="type">Type :</string>
    <string name="source">Source :</string>
</resources>
